# kSTL

./: CMakeLists.txt  README.md  kSTL.kdev4
.kdev4/: kSTL.kdev4
inc/: backendtest.hpp  controller.hpp  dialogs.h  errorhandler.hpp  gizmo.h  glshader.h  glwrap.h  gmenu.h  gmouse.h  mainmenu.hpp  mainwindow.hpp  metawidget.hpp  model.hpp  renderarea.hpp  sbackground.hpp  sglarea.hpp  smeshstl.hpp  squirclerenderer.hpp  srendertoolbox.hpp  stl.h  svao.hpp  svkbuffer.hpp  svulkanmeta.hpp  vhelper.h  vresult.h  vulkanrenderarea.hpp  vulkanwidget.hpp  vulqanpix.hpp
inc/dialogs/: colour.h
shaders/: fragmentshd1.glsl  gizmo.fragment.glsl  gizmo.vertex.glsl  vertexshd1.glsl
src/: backendtest.cpp  colour_dialog.c  controller.cpp  dialogs.c  errorhandler.cpp  gizmo.c  glshader.c  glwrap.c  gmenu.c  gmouse.c  main.c  main.cpp  mainmenu.cpp  mainwindow.cpp  metawidget.cpp  model.cpp  renderarea.cpp  resources.qrc  sbackground.cpp  sglarea.cpp  smeshstl.cpp  squirclerenderer.cpp  srendertoolbox.cpp  stl.c  svao.cpp  svkbuffer.cpp  svulkanmeta.cpp  vhelper.c  vresult.c  vulkanrenderarea.cpp  vulkanwidget.cpp  vulqanpix.cpp
src/contents/ui/: main.qml
src/shaders/: background.frag  background.vert  model.frag  model.vert  test.frag  test.frag.spv  test.vert  test.vert.spv  testConst.vert.spv  testUniform.vert.spv
